fix z-index

--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -29,6 +29,7 @@ header {
   background: rgba(22, 82, 128, 0.95);
   background-image: url(/images/noise.png);
   border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  z-index: 100;
 }
 
 header nav h1 {
